fixed login/registration moving too much

--- a/Frontend/lab-website/src/Login.css
+++ b/Frontend/lab-website/src/Login.css
@@ -21,8 +21,9 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: top;
     border-radius: 10px;
+    height: 300px;
 
 }
 
